objects/ASI_LUX_Account_Directory__c.object
<CustomObject>
    <description>Public Directory of ASI LUX Accounts - has limited information.</description>
    <fields>
        <fullName>ASI_LUX_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Directories_Le_Cercle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Directories_Le_Cercle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Le_Cercle_Member__c</fullName>
        <formula>ASI_LUX_Account__r.ASI_LUX_Le_Cercle_Member__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Le Cercle Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Preferred_Alcohol_Brand__c</fullName>
        <formula>IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c , &quot;Royal Salute&quot;), &quot;Royal Salute&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;The Glenlivet&quot;), &quot;The Glenlivet&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;Johnnie Walker &amp; Son&quot;), &quot;Johnnie Walker &amp; Son&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;Johnnie Walker Blue Label&quot;), &quot;Johnnie Walker Blue Label&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;Macallan&quot;), &quot;Macallan&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;Ballantine&quot;), &quot;Ballantine&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;Chivas&quot;), &quot;Chivas&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;Martell&quot;), &quot;Martell&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;Hennessy&quot;), &quot;Hennessy&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;Remi-Martin&quot;), &quot;Remi-Martin&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;Perrier-Jouet&quot;), &quot;Perrier-Jouet&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;G.H. MUMM&quot;), &quot;G.H. MUMM&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;Dom Perignon&quot;), &quot;Dom Perignon&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;Krug&quot;), &quot;Krug&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;Louis Roederer&quot;), &quot;Louis Roederer&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;Veuve Cliquot&quot;), &quot;Veuve Cliquot&quot; + BR() , NULL) + 
IF(INCLUDES( ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1__c, &quot;Ruinart&quot;), &quot;Ruinart&quot; + BR() , NULL) + 
ASI_LUX_Account__r.ASI_LUX_Preferred_Alcohol_Brand_1_Other__c +
ASI_LUX_Account__r.ASI_LUX_Preferred_Wine_1__c +
ASI_LUX_Account__r.ASI_LUX_Preferred_Vodka_1__c</formula>
        <label>Preferred Alcohol Brand</label>
        <type>Text</type>
    </fields>
    <label>Account Directory (ASI LUX)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_LUX_Account_Owner__c</columns>
        <columns>ASI_LUX_Preferred_Alcohol_Brand__c</columns>
        <columns>ASI_LUX_Le_Cercle_Member__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_LUX_HK_All_Users</group>
            <group>ASI_LUX_HK_HK_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Directories (ASI LUX)</pluralLabel>
    <recordTypes>
        <fullName>ASI_LUX_Account_Directory</fullName>
        <active>true</active>
        <label>ASI LUX Account Directory</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>